CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_emplmt_exp__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_emplmt_exp</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_emplmt_exp</externalName>
    <fields>
        <fullName>amt_exp_annual__c</fullName>
        <description>amt_exp_annual</description>
        <externalDeveloperName>amt_exp_annual</externalDeveloperName>
        <label>Amount Expense Annual</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Identifier Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_exp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Eligity Family Compsn ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Employment Expense</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_exp</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv__c</fullName>
        <description>idn_emplmt_indiv</description>
        <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
        <label>Identifier Individual employment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_emplmt_exp__c</fullName>
        <description>idn_indiv_eligty_emplmt_exp</description>
        <externalDeveloperName>idn_indiv_eligty_emplmt_exp</externalDeveloperName>
        <label>Indiv Eligity Emplmt Expense ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Identifier Eligity Family Composition</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_indiv_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Employment Expense</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_exp</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_emplmt_exp1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Individual Eligibility Employment Exp</label>
    <pluralLabel>Individual Eligibility Employment Exp</pluralLabel>
</CustomObject>